<resources>
    <string name="app_name">Undiscoverd</string>
    <string name="title_activity_maps">Map</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="signUp_first_name_hint">First Name</string>
    <string name="signUp_last_name_hint">Last Name</string>
    <string name="signUp_password_hint">Password</string>
    <string name="signUp_username_hint">Username</string>
    <string name="signUp_confirm_password_hint">Confirm Password</string>
    <string name="signUp_button">Sign Up</string>
    <string name="button_my_friends">My Friends</string>
    <string name="menu_main">Home</string>
    <string name="menu_map">Map</string>
    <string name="menu_my_trips">Trips</string>
    <string name="menu_my_friends">Friends</string>
    <string name="menu_my_badges">Badges</string>
    <string name="menu_logout">Log Out</string>
    <string name="menu_text">Menu</string>
    <string name="open_navigation_drawer">Open</string>
    <string name="close_navigation_drawer">Close</string>
    <string name="hello_blank_fragment">This could be our main screen displaying all the options</string>
    <string name="title_activity_badges">activity_badges</string>
    <string name="display_friend_name">Display Name</string>
    <string name="display_friend_username">Username</string>
    <string name="add_friend_text">Add Friend</string>
    <string name="enter_username_hint">Enter username</string>
    <string name="search">Search</string>
    <string name="add_friend">Add Friend</string>
    <string name="friend_profile_full_name">User full name.</string>
    <string name="friend_profile_location">Hometown</string>
    <string name="visible">Visible</string>
    <string name="add_current_location_string">Add Current Location</string>
    <string name="add_other_location_string">Add Other Location</string>
    <string name="cameraError">Operation was not successful. Please try again.</string>
    <string name="menu_camera">Camera</string>
    <string name="take_photo">Take Photo</string>
    <string name="select_photo">Select Photo</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="type_image_name_here">Type Image Name Here!</string>
    <string name="todo">TODO</string>
    <string name="login_shortcut">JUST CLICK LOGIN BUTTON</string>
</resources>
