<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single" android:id="@+id/group_1_nav">

        <item
            android:id="@+id/menu_main"
            android:title="@string/menu_main"/>
        <item
            android:id="@+id/menu_map"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/menu_my_photos"
            android:title="Photos" />
        <item
            android:id="@+id/menu_my_friends"
            android:title="@string/menu_my_friends" />
        <item
            android:id="@+id/menu_my_badges"
            android:title="@string/menu_my_badges" />
        <item
            android:id="@+id/menu_camera"
            android:title="@string/menu_camera" />
    </group>

</menu>