<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/add_friend_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/search_friend_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/search_friend_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:text="@string/add_friend_text"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/add_friend_edit_text"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_below="@id/search_friend_text_view"
            android:padding="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_username_hint" />

        <Button
            android:id="@+id/button_search_for_friend"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="31dp"
            android:layout_marginEnd="39dp"
            android:text="@string/search" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/add_friend_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_friend_relative_layout">

        <TextView
            android:id="@+id/add_friend_text_view"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/add_friend_text"
            android:textSize="20sp"
            android:visibility="invisible"/>

    </RelativeLayout>



</RelativeLayout>